# ReaderAPI

./: .gitignore  .test.env  README.md  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 009f33245dc6_add_on_delete_cascade_for_book.py  2cdb88e7fa45_.py  391ffc5cb692_change_field_type.py  4b3ac16b97b3_add_orm_relations.py  5d47cd917855_add_autoincrement.py  5fbc43c88079_add_password_delete_username.py  6efda96d96ad_delete_cascade_for_user_model.py  71f7397d3a90_tg_id_int_to_bigint.py  964b1b8d342c_create_tables.py  f74d7fe300a7_delete_on_delete_cascade.py
src/: config.py  database.py  main.py
src/api/books/: models.py  queries.py  router.py  routers.py  schemas.py  utils.py
src/api/repositories/: base.py  books.py  users.py
src/api/services/: books.py  users.py
src/api/users/: models.py  routers.py  schemas.py  utils.py
tests/: conftest.py  test_api.py  test_db.py
