[tool.poetry]
name = "ReadingProgress"
version = "0.1.0"
description = ""
authors = ["frank <frank.danil704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.3"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pytest = "^8.2.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.6"
slowapi = "^0.1.9"
passlib = "^1.7.4"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
